# api/docs/swagger.json
@@ -1778,7 +1778,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Response"
+                            "$ref": "#/definitions/models.Check"
                         }
                     },
                     "400": {
@@ -2263,6 +2263,20 @@
                     }
                 },
                 "count": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.Check": {
+            "type": "object",
+            "properties": {
+                "products": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Product"
+                    }
+                },
+                "total_sum": {
                     "type": "integer"
                 }
             }
